<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Thermostat</string>
    <string name="thermostat_is_heating">Thermostat is heating</string>
    <string name="uptime">Uptime: <xliff:g id="days" example="7">%1$d</xliff:g> days <xliff:g id="hours" example="02">%2$02d</xliff:g>:<xliff:g id="minutes" example="32">%3$02d</xliff:g>:<xliff:g id="seconds" example="09">%4$02d</xliff:g></string>
    <string name="target_temperature">Target temperature</string>
    <string name="current_temperature">Current temperature</string>
    <string name="temperature_placeholder" translatable="false">---</string>
    <string name="uptime_placeholder">Uptime: ---</string>
    <string name="heater_status">Heater status</string>
    <string name="chart_label_room">Room #<xliff:g id="room_id" example="1">%1$d</xliff:g>, sensor #<xliff:g id="sensor_number">%2$d</xliff:g></string>
    <string name="chart_no_data">Please wait…</string>
    <string name="chart_description">Measured temperatures in the last 30 minutes</string>
    <string name="chart_marker" translatable="false"><xliff:g id="temperature_celsius">%1$2.2f</xliff:g> °C\n<xliff:g id="date" example="2020. 05. 13 12:23:45">%2$s</xliff:g>\n<xliff:g id="room_sensor_str" example="Room #1, sensor #1">%3$s</xliff:g></string>
    <string name="temperature_1d" translatable="false"><xliff:g id="temperature_celsius">%1$2.1f</xliff:g> °C</string>
    <string name="temperature_2d" translatable="false"><xliff:g id="temperature_celsius">%1$2.2f</xliff:g> °C</string>
    <string name="toast_refreshing">Refreshing…</string>
    <string name="title_home">Graph</string>
    <string name="title_settings">Settings</string>
    <string name="label_day_periods">Day periods</string>
    <string name="label_weekend">Weekend</string>
    <string name="label_weekday">Weekday</string>
    <string name="description_tv_time">TV time</string>
    <string name="description_daytime">Daytime</string>
    <string name="description_nighttime">Nighttime</string>
    <string name="description_day_time">Day time</string>
    <string name="description_night_time">Night time</string>
    <string name="hint_end">End</string>
    <string name="hint_start">Start</string>
    <string name="label_target_temperatures">Target temperatures</string>
    <string name="save_settings">Save settings</string>
    <string name="dash" translatable="false">—</string>
    <string name="confirmSave">Do you want to save new settings?</string>
    <string name="answerYes">Yes</string>
    <string name="answerNo">No</string>
    <string name="weekend_tv_time_target_temperature">Weekend tv-time target temperature</string>
    <string name="weekday_tv_time_target_temperature">Weekday tv-time target temperature</string>
    <string name="weekend_day_target_temperature">Weekend day target temperature</string>
    <string name="weekday_day_target_temperature">Weekday day target temperature</string>
    <string name="weekend_night_target_temperature">Weekend night target temperature</string>
    <string name="weekday_night_target_temperature">Weekday night target temperature</string>
</resources>
