<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryExtraLightColor"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/primaryColor"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:background="@color/primaryColor"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_thermostat" />

        <TextView
            android:id="@+id/titleView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textColor="@color/primaryTextColor"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/powerIconView"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/thermostat_is_heating"
            app:srcCompat="@drawable/ic_flame"
            tools:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:background="@color/primaryLightColor"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/statusIconView"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/heater_status"
            app:srcCompat="@drawable/ic_power"
            tools:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/roundedborder"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/target_temperature"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/targetTempView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temperature_placeholder"
                android:textAlignment="center"
                android:textColor="@color/secondaryDarkColor"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/currentTempLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/roundedborder"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/current_temperature"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/currentTempView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temperature_placeholder"
                android:textAlignment="center"
                android:textColor="@color/primaryDarkColor"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1" />

    <!--    <Space-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:layout_weight="1" />-->

    <TextView
        android:id="@+id/statusView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uptime_placeholder"
        android:textAlignment="center"
        android:textColor="@color/primaryDarkColor" />

</LinearLayout>